{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 166,
  "lineage": "6c5cb1a9-f9bc-c592-089a-2a7df5b2b326",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c450682bd07074da",
            "arn": "arn:aws:ec2:us-east-1:905418381548:elastic-ip/eipalloc-0c450682bd07074da",
            "association_id": "eipassoc-0426d163075244080",
            "domain": "vpc",
            "id": "eipalloc-0c450682bd07074da",
            "instance": "i-0b6f172546a01717f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06b88ed123b3371fe",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-54-227-126-16.compute-1.amazonaws.com",
            "public_ip": "54.227.126.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-eip",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Elastic IP"
            },
            "tags_all": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-eip",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Elastic IP"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.main",
            "module.compute.aws_key_pair.main",
            "module.networking.aws_security_group.app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:905418381548:instance/i-0b6f172546a01717f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6f172546a01717f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devsecops-quotes-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b88ed123b3371fe",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-54-162-135-164.compute-1.amazonaws.com",
            "public_ip": "54.162.135.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:905418381548:key/abde6f92-1b12-400c-805d-a7780ab16e32",
                "tags": {
                  "AutoStop": "true",
                  "CostCenter": "Development",
                  "DeployedAt": "2025-07-02 23:22:46 UTC",
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Name": "devsecops-quotes-dev-root-volume",
                  "Owner": "DevOps-Team",
                  "Project": "DevSecOps-Demo",
                  "Repository": "devsecops-quotes-app",
                  "Team": "DevSecOps",
                  "Terraform": "true",
                  "Type": "EBS Volume"
                },
                "tags_all": {
                  "AutoStop": "true",
                  "CostCenter": "Development",
                  "DeployedAt": "2025-07-02 23:22:46 UTC",
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Name": "devsecops-quotes-dev-root-volume",
                  "Owner": "DevOps-Team",
                  "Project": "DevSecOps-Demo",
                  "Repository": "devsecops-quotes-app",
                  "Team": "DevSecOps",
                  "Terraform": "true",
                  "Type": "EBS Volume"
                },
                "throughput": 125,
                "volume_id": "vol-0e094525e3fe0e6cb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c39d0c4cc7acb3c5",
            "tags": {
              "AutoStart": "true",
              "AutoStop": "true",
              "BackupPolicy": "daily",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-instance",
              "OS": "Ubuntu 22.04 LTS",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Role": "Application Server",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "EC2 Instance"
            },
            "tags_all": {
              "AutoStart": "true",
              "AutoStop": "true",
              "BackupPolicy": "daily",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-instance",
              "OS": "Ubuntu 22.04 LTS",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Role": "Application Server",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c6057277c5cc6b6a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_key_pair.main",
            "module.networking.aws_security_group.app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:internet-gateway/igw-0359deeae7c295876",
            "id": "igw-0359deeae7c295876",
            "owner_id": "905418381548",
            "tags": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-igw",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Internet Gateway"
            },
            "tags_all": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-igw",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Internet Gateway"
            },
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:route-table/rtb-0d06f8048ff6ebbba",
            "id": "rtb-0d06f8048ff6ebbba",
            "owner_id": "905418381548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0359deeae7c295876",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-public-rt",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Public",
              "Type": "Route Table"
            },
            "tags_all": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-public-rt",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Public",
              "Type": "Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c16e94fada770e63",
            "route_table_id": "rtb-0d06f8048ff6ebbba",
            "subnet_id": "subnet-0c39d0c4cc7acb3c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1fd373bbf4024ec",
            "route_table_id": "rtb-0d06f8048ff6ebbba",
            "subnet_id": "subnet-06585885f1733ccdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:security-group/sg-02c7d94ea45e2c3cc",
            "description": "Security group para Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "To Application Instances",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6057277c5cc6b6a"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-02c7d94ea45e2c3cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devsecops-quotes-dev-alb-20250702221458571900000003",
            "name_prefix": "devsecops-quotes-dev-alb-",
            "owner_id": "905418381548",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-alb-sg",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Purpose": "Load Balancer",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Security Group"
            },
            "tags_all": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-alb-sg",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Purpose": "Load Balancer",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.app",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:security-group/sg-0c6057277c5cc6b6a",
            "description": "Security group para aplicacao devsecops-quotes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6057277c5cc6b6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodeJS Application",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devsecops-quotes-dev-app-20250702221454339700000001",
            "name_prefix": "devsecops-quotes-dev-app-",
            "owner_id": "905418381548",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-app-sg",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Purpose": "Application",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Security Group"
            },
            "tags_all": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-app-sg",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Purpose": "Application",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:subnet/subnet-0fe43480d6ab22c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe43480d6ab22c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418381548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-private-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Private",
              "Type": "Private Subnet"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-private-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Private",
              "Type": "Private Subnet"
            },
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:subnet/subnet-005bd30bc99cc9a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005bd30bc99cc9a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418381548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-private-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Private",
              "Type": "Private Subnet"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-private-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Private",
              "Type": "Private Subnet"
            },
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:subnet/subnet-0c39d0c4cc7acb3c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c39d0c4cc7acb3c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418381548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-public-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Public",
              "Type": "Public Subnet"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-public-subnet-1",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Public",
              "Type": "Public Subnet"
            },
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:subnet/subnet-06585885f1733ccdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06585885f1733ccdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418381548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-public-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Public",
              "Type": "Public Subnet"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-public-subnet-2",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Tier": "Public",
              "Type": "Public Subnet"
            },
            "vpc_id": "vpc-0a5963a26dfdf1d1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418381548:vpc/vpc-0a5963a26dfdf1d1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c95b33ad46f7edae",
            "default_route_table_id": "rtb-0450dddd21787386c",
            "default_security_group_id": "sg-07c2da47ff359bb0b",
            "dhcp_options_id": "dopt-0fa9ff03f35fa5cc3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5963a26dfdf1d1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0450dddd21787386c",
            "owner_id": "905418381548",
            "tags": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-vpc",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "VPC"
            },
            "tags_all": {
              "AutoStop": "true",
              "CostCenter": "Development",
              "DeployedAt": "2025-07-02 23:22:46 UTC",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devsecops-quotes-dev-vpc",
              "Owner": "DevOps-Team",
              "Project": "DevSecOps-Demo",
              "Repository": "devsecops-quotes-app",
              "Team": "DevSecOps",
              "Terraform": "true",
              "Type": "VPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}